# excalidraw-native

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  PROBLEMS.md  README.md  excalidraw-native-PLAN.md
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml
benches/: benchmark_targets.rs
crates/excalidraw-cli/: Cargo.toml
crates/excalidraw-cli/benches/: cli_e2e.rs  mcp_e2e.rs
crates/excalidraw-cli/src/: main.rs
crates/excalidraw-cli/tests/: cli_integration.rs
crates/excalidraw-core/: Cargo.toml
crates/excalidraw-core/benches/: lib_bench.rs
crates/excalidraw-core/src/: color.rs  defaults.rs  lib.rs  normalize.rs  parse.rs  types.rs  validate.rs
crates/excalidraw-mcp/: Cargo.toml
crates/excalidraw-mcp/src/: lib.rs
crates/excalidraw-mermaid/: Cargo.toml
crates/excalidraw-mermaid/benches/: mermaid_bench.rs
crates/excalidraw-mermaid/benches/fixtures/: class_medium.mmd  class_tiny.mmd  flowchart_large.mmd  flowchart_medium.mmd  flowchart_small.mmd  sequence_medium.mmd  state_medium.mmd
crates/excalidraw-mermaid/src/: builder.rs  engine.rs  error.rs  fallback.rs  lib.rs  options.rs  style.rs
crates/excalidraw-mermaid/src/convert/: class.rs  common.rs  er.rs  flowchart.rs  mod.rs  sequence.rs  state.rs
crates/excalidraw-mermaid/tests/: integration.rs  snapshots.rs
crates/excalidraw-mermaid/tests/snapshots/: excalidraw@class_basic.snap  excalidraw@class_inheritance.snap  excalidraw@class_namespaces.snap  excalidraw@er_basic.snap  excalidraw@er_cardinalities.snap  excalidraw@flowchart_50nodes.snap  excalidraw@flowchart_basic.snap  excalidraw@flowchart_shapes.snap  excalidraw@flowchart_styled.snap  excalidraw@flowchart_subgraph.snap  excalidraw@sequence_activations.snap  excalidraw@sequence_basic.snap  excalidraw@sequence_loops.snap  excalidraw@sequence_notes.snap  excalidraw@state_basic.snap  excalidraw@state_choice.snap  excalidraw@state_composite.snap  excalidraw@unsupported_gantt.snap  svg@class_basic.snap  svg@class_inheritance.snap  svg@class_namespaces.snap  svg@er_basic.snap  svg@er_cardinalities.snap  svg@flowchart_50nodes.snap  svg@flowchart_basic.snap  svg@flowchart_shapes.snap  svg@flowchart_styled.snap  svg@flowchart_subgraph.snap  svg@sequence_activations.snap  svg@sequence_basic.snap  svg@sequence_loops.snap  svg@sequence_notes.snap  svg@state_basic.snap  svg@state_choice.snap  svg@state_composite.snap
crates/excalidraw-render/: Cargo.toml
crates/excalidraw-render/benches/: render_bench.rs
crates/excalidraw-render/src/: lib.rs
crates/excalidraw-render/tests/: snapshots.rs  svg_validity.rs
crates/excalidraw-render/tests/snapshots/: large_200_elements_digest.snap  svg@architecture_diagram.snap  svg@arrows_basic.snap  svg@arrows_bound.snap  svg@complex_diagram.snap  svg@flowchart_complex.snap  svg@frame_clip.snap  svg@freedraw.snap  svg@image_embed.snap  svg@simple_shapes.snap  svg@text_containers.snap  svg@text_standalone.snap  svg@unsupported.snap
crates/excalidraw-tui/: Cargo.toml
crates/excalidraw-tui/src/: lib.rs
docs/: deviations.md
docs/benchmarks/: benchmarks_overview.excalidraw  benchmarks_overview.mmd
scripts/: bench_all.sh
tests/fixtures/: README.md  architecture_diagram.excalidraw  arrows_basic.excalidraw  arrows_bound.excalidraw  complex_diagram.excalidraw  flowchart_complex.excalidraw  frame_clip.excalidraw  freedraw.excalidraw  image_embed.excalidraw  large_200_elements.excalidraw  simple_shapes.excalidraw  text_containers.excalidraw  text_standalone.excalidraw  unsupported.excalidraw
tests/fixtures/mermaid/: class_basic.mmd  class_inheritance.mmd  class_namespaces.mmd  er_basic.mmd  er_cardinalities.mmd  flowchart_50nodes.mmd  flowchart_shapes.mmd  flowchart_styled.mmd  flowchart_subgraph.mmd  sequence_activations.mmd  sequence_basic.mmd  sequence_loops.mmd  sequence_notes.mmd  state_basic.mmd  state_choice.mmd  state_composite.mmd  unsupported_gantt.mmd
tests/golden/: ACCEPTED_DEVIATIONS.md
