[workspace]
resolver = "2"
members = [
    "crates/excalidraw-core",
    "crates/excalidraw-render",
    "crates/excalidraw-tui",
    "crates/excalidraw-mcp",
    "crates/excalidraw-cli",
    "crates/excalidraw-mermaid",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/quangdang46/excalidraw-native"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "color"] }
crossterm = "0.29"
fontdb = "0.23"
icy_sixel = "0.5"
image = "0.25"
ratatui = "0.30"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
resvg = "=0.47.0"
rmcp = { version = "=1.7.0", features = ["server", "transport-io"] }
rough-rs = "0.1"
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
thiserror = "1"
tiny-skia = "0.11"
assert_cmd = "2"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
predicates = "3"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
usvg = "=0.47.0"
# Mermaid v0.2 — pin exact versions because layout structs are the API boundary.
merman-core = "=0.4.0"
merman-render = "=0.4.0"
