[package]
name = "excalidraw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for excalidraw-native"

[[bin]]
name = "excd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
excalidraw-core = { path = "../excalidraw-core" }
excalidraw-mcp = { path = "../excalidraw-mcp" }
excalidraw-render = { path = "../excalidraw-render" }
excalidraw-tui = { path = "../excalidraw-tui" }

[dev-dependencies]
assert_cmd.workspace = true
criterion.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde_json.workspace = true
tempfile.workspace = true
predicates.workspace = true

[[bench]]
name = "cli_e2e"
harness = false

[[bench]]
name = "mcp_e2e"
harness = false
