[package]
name = "excalidraw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core Excalidraw parsing, validation, and normalization types for excalidraw-native"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-width.workspace = true
