[package]
name = "excalidraw-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP server tools for excalidraw-native"

[dependencies]
base64.workspace = true
excalidraw-core = { path = "../excalidraw-core" }
excalidraw-render = { path = "../excalidraw-render" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

