[package]
name = "excalidraw-mermaid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Mermaid → Excalidraw conversion built on merman-core/merman-render and the excalidraw-native renderer"

[dependencies]
excalidraw-core = { path = "../excalidraw-core" }
merman-core.workspace = true
merman-render.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
excalidraw-render = { path = "../excalidraw-render" }
