[package]
name = "excalidraw-mermaid"
# Tracks the Mermaid → Excalidraw conversion line; bumped to 0.2.0 for the
# first stable v0.2 release after the alpha cycle. The rest of the workspace
# stays on `version.workspace = true` (0.1.0) until the renderer follows.
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Mermaid → Excalidraw conversion built on merman-core/merman-render and the excalidraw-native renderer"

[dependencies]
excalidraw-core = { path = "../excalidraw-core" }
merman-core.workspace = true
merman-render.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
excalidraw-render = { path = "../excalidraw-render" }
excalidraw-core = { path = "../excalidraw-core" }
criterion.workspace = true
insta.workspace = true

[[bench]]
name = "mermaid_bench"
harness = false
