[package]
name = "excalidraw-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Terminal preview UI for excalidraw-native"

[dependencies]
crossterm.workspace = true
icy_sixel.workspace = true
image.workspace = true
excalidraw-core = { path = "../excalidraw-core" }
excalidraw-render = { path = "../excalidraw-render" }
base64.workspace = true
scopeguard = "1"
ratatui.workspace = true
ratatui-image.workspace = true
thiserror.workspace = true

